# pad-checker

./: .gitignore  pyproject.toml
src/pad_checker/: __init__.py  main.py
src/pad_checker/services/: __init__.py  pad_service.py
src/pad_checker/templates/: base.html  index.html
src/pad_checker/templates/partials/: card_result.html  newer_alert.html
