[project]
name = "pad-checker"
version = "0.1.0"
description = "Web app to verify PAD card submissions"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pad-analytics",
]

[tool.uv.sources]
pad-analytics = { git = "https://github.com/PaperAnalyticalDeviceND/pad-analytics.git", rev = "aee1fd12c5845fb0b523592d79b8ea97d988d2aa" }

[project.scripts]
pad-checker = "pad_checker.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pad_checker"]
